Replace IOUtils with standard Java functions
Signed-off-by: Matt Sicker <mattsicker@apache.org>